#pragma once

#include <AffichageLCD.h>
#include <GestionBME.h>
#include <GestionConnexion.h>

class Station
{
    private:
    public:
    void Initialiser();
    void Executer();
    
};